Oppdatert footer i css

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -63,8 +63,8 @@ footer {
   color: $white;
   text-align: center;
   padding: 1rem;
-  margin-bottom: 1rem;
-  position: absolute;
+  width: 100%;
+  border-radius: 5px;
 }
 
 // Stil for overskrifter
